[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/PopUpFactory.gd" type="Script" id=1]
[ext_resource path="res://Themes/Default.tres" type="Theme" id=2]

[node name="PopUpFactory" type="Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Grow Direction", "Rect", "custom_constants" ]

[node name="Container" type="Container" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 120.0
margin_right = 1200.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
_sections_unfolded = [ "Rect", "Theme" ]

[node name="Center" type="CenterContainer" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1120.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Center" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 536.0
margin_top = 171.0
margin_right = 584.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 30
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="btn700" type="Button" parent="Container/Center/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 48.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_constants/hseparation = 30
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "700"
flat = false
align = 1

[node name="btn500" type="Button" parent="Container/Center/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 67.0
margin_right = 48.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_constants/hseparation = 30
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "500"
flat = false
align = 1

[node name="btn200" type="Button" parent="Container/Center/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 134.0
margin_right = 48.0
margin_bottom = 171.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_constants/hseparation = 30
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "200"
flat = false
align = 1

[node name="btn650" type="Button" parent="Container/Center/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 201.0
margin_right = 48.0
margin_bottom = 238.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_constants/hseparation = 30
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "650"
flat = false
align = 1

[connection signal="pressed" from="Container/Center/VBoxContainer/btn700" to="." method="_on_btn700_pressed"]

[connection signal="pressed" from="Container/Center/VBoxContainer/btn500" to="." method="_on_btn500_pressed"]

[connection signal="pressed" from="Container/Center/VBoxContainer/btn200" to="." method="_on_btn200_pressed"]

[connection signal="pressed" from="Container/Center/VBoxContainer/btn650" to="." method="_on_btn650_pressed"]


